Cambios en validaciones de métodos y consulta de activos